# OverlayProc

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  build.py  conanfile.py  conanfile.txt  configure.py  dependencies.py  dist.bat  dist.py  exclude_files.txt  patch_gen.py
src/: CMakeLists.txt  rev.py  version.cpp  version.h
src/overlay_proc/: CMakeLists.txt  QTransparentSizeGrip.cpp  QTransparentSizeGrip.h  Resource.rc  Resource.rc.in  appregion.js  changerenderer.cpp  changerenderer.h  changerenderer.ui  copydatawidget.cpp  copydatawidget.h  lup.bat  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  overlaymainwindow.cpp  overlaymainwindow.h  overlaywebenginepage.cpp  overlaywebenginepage.h  qonekeysequenceedit.h  resources.qrc  settings_impl.cpp  settings_impl.h  utility.cpp  utility.h  websocketserver.cpp  websocketserver.h  widgetdrageventfilter.cpp  widgetdrageventfilter.h
src/overlay_proc/translate/: overlay_proc_en.ts  overlay_proc_ja.ts  overlay_proc_ko.ts
src/settings/: CMakeLists.txt  settings.cpp  settings.h
test/: close.bat  close_all.bat  req.bat  req.json  req_all.bat  req_all.json  req_noid.bat  req_noid.json  res.bat  res.json  res_all.bat  test.json
tools/: dependency.py
